# horsewords-lib

./: LICENSE  README.md  pyproject.toml
notebooks/: export_data.ipynb  update_cache.ipynb
src/horsewords/: fimfarchive.py  query.py  template.py
