[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "horsewords"
version = "0.0.1"
authors = [
  { name="Synthbot Anon", email="synthbot@celestia.ai" },
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "beautifulsoup4",
    "lark",
    "EbookLib",
    "tqdm",
    "joblib",
    "datasets",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]

